src/tools/dmlc/test/1.2/errors/T_ECYCLICTRAIT_template.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

template t {
    /// ERROR ECYCLICTEMPLATE
    is u;
}

template u {
    /// ERROR ECYCLICTEMPLATE
    is v;
}

template v {
    /// ERROR ECYCLICTEMPLATE
    is w;
}

template w {
    /// ERROR ECYCLICTEMPLATE
    is t;
}

// This hack used to work...
template a {
    data int i;
    if ($recursions > 0) {
        group sub {
            parameter recursions = $parent.recursions - 1;
            /// ERROR ECYCLICTEMPLATE
            is a;
        }
    }
}
bank b {
    parameter recursions = 2;
    // instantiation of cyclic templates are silently ignored
    is a;
    // ... so this is not a name collision
    data bool i;
}
